<resources>
    <string name="app_name">AgendaCZ</string>

    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="required_field">Required Field!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ConfirmDelete">Confirm Delete</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="cep">cep</string>
    <string name="Find">Find</string>
    <string name="logradouro">logradouro</string>
    <string name="tipoLogradouro">tipoLogradouro</string>
    <string name="bairro">bairro</string>
    <string name="cidade">city</string>
    <string name="estado">state</string>
    <string name="Loading">Loading</string>
    <string name="msgErrorUsernamePasswordInvalido">Usuario ou Senha Invalida</string>
    <string name="CEPNotFound">CEP Não Encontrado</string>
</resources>
